--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="image-frame">
                 <img src="/media/elprimo.png" alt="Imagen 1" class="decor-image">
                 <video id="birthdayVideo" controls>
-                    <source src="video sebas.mov">
+                    <source src="video sebas.mov" type="video/mp4">
                     Tu navegador no soporta el video.
                 </video>
                 <img src="/media/moe.png" alt="Imagen 2" class="decor-image">
