--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h2>Te Amamos Mucho Mi Gordo <span id="cumpleanero">Panzon</span>!</h2>
         <div class="video-container">
             <div class="image-frame">
-                <img src="/media/elprimo.png" alt="Imagen 1" class="decor-image">
+                <img src="elprimo.png" alt="Imagen 1" class="decor-image">
                 <video id="birthdayVideo" controls>
                     <source src="video sebas.mov" type="video/mp4">
                     Tu navegador no soporta el video.
                 </video>
-                <img src="/media/moe.png" alt="Imagen 2" class="decor-image">
+                <img src="moe.png" alt="Imagen 2" class="decor-image">
             </div>
         </div>
         <button id="playButton">Reproducir Video</button>
